Possible fix for storymap spacing issues on the knight lab site.

--- a/source/less/VCO.StoryMap.less
+++ b/source/less/VCO.StoryMap.less
@@ -51,6 +51,8 @@
 .vco-storymap {
 	width:100%;
 	height:100%;
+	font-size: 16px;
+	line-height: normal;
 	overflow:hidden;
 	.user-select(none);
 }
